[gd_scene load_steps=11 format=3 uid="uid://boxs2shmlbmwn"]

[ext_resource type="Script" path="res://scripts/xatu.gd" id="1_u5k0j"]
[ext_resource type="Texture2D" uid="uid://kdtw306vy7ti" path="res://attacks/xatu_aura_attack.png" id="2_0cgbk"]
[ext_resource type="Texture2D" uid="uid://nye6g1je1wpi" path="res://attacks/xatu_aura_idle.png" id="3_oxhrb"]
[ext_resource type="Texture2D" uid="uid://cpa4i56ji5yjr" path="res://attacks/xatu_aura_anim.png" id="4_q2ivw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0f3co"]
radius = 3.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uo038"]
radius = 4.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_632um"]
radius = 32.0

[sub_resource type="Animation" id="Animation_a68uq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attack_anim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack_Aura/CollisionShape2D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [32.0]
}

[sub_resource type="Animation" id="Animation_whe8k"]
resource_name = "attack"
length = 0.8
step = 0.0667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0667, 0.1334, 0.2001, 0.2668, 0.3335, 0.4002, 0.4669, 0.5336, 0.6003, 0.667, 0.7337, 0.8004),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attack_anim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2001, 0.2668, 0.3335, 0.4002),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack_Aura/CollisionShape2D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0667, 0.1334, 0.2001, 0.2668, 0.3335, 0.4002),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.01, 0.01, 0.1, 13.0384, 21.0238, 32.0, 0.01]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dyj28"]
_data = {
"RESET": SubResource("Animation_a68uq"),
"attack": SubResource("Animation_whe8k")
}

[node name="Xatu" type="StaticBody2D"]
z_index = 1
position = Vector2(0, -9)
collision_layer = 32
collision_mask = 41
script = ExtResource("1_u5k0j")
health = 50
recoil = 0
aura = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_0f3co")

[node name="attack" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -1)
texture = ExtResource("2_0cgbk")
hframes = 12

[node name="idle" type="Sprite2D" parent="."]
texture = ExtResource("3_oxhrb")

[node name="attack_anim" type="Sprite2D" parent="."]
position = Vector2(-0.5, 7.5)
texture = ExtResource("4_q2ivw")
hframes = 4

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(0, 9)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_uo038")

[node name="Attack_Aura" type="Area2D" parent="."]
position = Vector2(1, -2)
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Aura"]
position = Vector2(-1, 11)
shape = SubResource("CircleShape2D_632um")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dyj28")
}

[node name="attack_delay" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="area_entered" from="CollisionArea" to="." method="_on_collision_area_area_entered"]
[connection signal="area_exited" from="CollisionArea" to="." method="_on_collision_area_area_exited"]
[connection signal="timeout" from="attack_delay" to="." method="_on_attack_delay_timeout"]
